--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 rainout = { git = "https://github.com/MeadowlarkDAW/rainout.git", features = ["midi","jack-linux"]}
+clap = "4.1.8"
 log = "*"
 simple_logger = "2.1"
 
