--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rainout = { git = "https://github.com/MeadowlarkDAW/rainout.git", features = ["m
 clap = "4.1.8"
 log = "*"
 simple_logger = "2.1"
+thiserror = "1.0.39"
 
 # [dev-dependencies]
 # log = "*"
